md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -1,1 +1,5 @@
-#
+# [00. PyTorch Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb)
+
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTE2Mzg0MjUxNTRdfQ==
+-->
