md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -1,5 +1,5 @@
 # [00. PyTorch Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb)
-
+### [learnpytorch.io link](https://www.learnpytorch.io/00_pytorch_fundamentals/)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2Mzg0MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbMTE3MDQ5NzgxNywtMTYzODQyNTE1NF19
 -->
