md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -1,5 +1,8 @@
 # [00. PyTorch Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb)
-### [learnpytorch.io](https://www.learnpytorch.io/00_pytorch_fundamentals/) link
+#### Useful links:
+- [learnpytorch.io](https://www.learnpytorch.io/00_pytorch_fundamentals/) link
+- - []()
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYzMTcwODkwNywtMTYzODQyNTE1NF19
+eyJoaXN0b3J5IjpbMzcwNjEzNTQzLC02MzE3MDg5MDcsLTE2Mz
+g0MjUxNTRdfQ==
 -->
