md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -1,8 +1,8 @@
 # [00. PyTorch Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb)
 #### Useful links:
 - [learnpytorch.io](https://www.learnpytorch.io/00_pytorch_fundamentals/) link
-- - []()
+- [Github](https://github.com/mrdbourke/pytorch-deep-learning) link
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzcwNjEzNTQzLC02MzE3MDg5MDcsLTE2Mz
-g0MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbLTU0OTEwMTA3NCwtNjMxNzA4OTA3LC0xNj
+M4NDI1MTU0XX0=
 -->
