md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -2,7 +2,9 @@
 #### Useful links:
 - [learnpytorch.io](https://www.learnpytorch.io/00_pytorch_fundamentals/) link
 - [Github](https://github.com/mrdbourke/pytorch-deep-learning) link
+- [Discussions page](https://github.com/mrdbourke/pytorch-deep-learning/discussions)
+- [PyTorch forum](https://discuss.pytorch.org/)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU0OTEwMTA3NCwtNjMxNzA4OTA3LC0xNj
-M4NDI1MTU0XX0=
+eyJoaXN0b3J5IjpbNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mz
+g0MjUxNTRdfQ==
 -->
