md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -4,7 +4,8 @@
 - [Github](https://github.com/mrdbourke/pytorch-deep-learning) link
 - [Discussions page](https://github.com/mrdbourke/pytorch-deep-learning/discussions)
 - [PyTorch forum](https://discuss.pytorch.org/)
+- [PyTorch Documentation](https://pytorch.org/docs/stable/)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mz
-g0MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbLTUyOTc0NjE3Niw1NTkyNjE2OTgsLTYzMT
+cwODkwNywtMTYzODQyNTE1NF19
 -->
