md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -1,11 +1,12 @@
 # [00. PyTorch Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb)
+This is me documenting the process of learning ML & AI using PyTorch 
 #### Useful links:
-- [learnpytorch.io](https://www.learnpytorch.io/00_pytorch_fundamentals/) link
+- [The guide](https://www.learnpytorch.io/00_pytorch_fundamentals/) link
 - [Github](https://github.com/mrdbourke/pytorch-deep-learning) link
 - [Discussions page](https://github.com/mrdbourke/pytorch-deep-learning/discussions)
 - [PyTorch forum](https://discuss.pytorch.org/)
 - [PyTorch Documentation](https://pytorch.org/docs/stable/)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUyOTc0NjE3Niw1NTkyNjE2OTgsLTYzMT
-cwODkwNywtMTYzODQyNTE1NF19
+eyJoaXN0b3J5IjpbODg3NDU0MzgyLDU1OTI2MTY5OCwtNjMxNz
+A4OTA3LC0xNjM4NDI1MTU0XX0=
 -->
