--- a/md/00.md
+++ b/md/00.md
@@ -1,12 +1,13 @@
-# [00. PyTorch Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb)
+# [00. PyTorch Fundamentals](https://www.learnpytorch.io/00_pytorch_fundamentals/)
 This is me documenting the process of learning ML & AI using PyTorch 
 #### Useful links:
-- [The guide](https://www.learnpytorch.io/00_pytorch_fundamentals/) link
-- [Github](https://github.com/mrdbourke/pytorch-deep-learning) link
+- [The guide i'm following](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb) 
+- [Github link ](https://github.com/mrdbourke/pytorch-deep-learning) link
 - [Discussions page](https://github.com/mrdbourke/pytorch-deep-learning/discussions)
 - [PyTorch forum](https://discuss.pytorch.org/)
 - [PyTorch Documentation](https://pytorch.org/docs/stable/)
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODg3NDU0MzgyLDU1OTI2MTY5OCwtNjMxNz
+eyJoaXN0b3J5IjpbNjM2ODA3NzQwLDU1OTI2MTY5OCwtNjMxNz
 A4OTA3LC0xNjM4NDI1MTU0XX0=
 -->
