md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -1,13 +1,16 @@
 # [00. PyTorch Fundamentals](https://www.learnpytorch.io/00_pytorch_fundamentals/)
 This is me documenting the process of learning ML & AI using PyTorch 
-#### Useful links:
+
+---------------- 
+
+### Useful links:
 - [The guide i'm following](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb) 
-- [Github link ](https://github.com/mrdbourke/pytorch-deep-learning) link
+- [Github link ](https://github.com/mrdbourke/pytorch-deep-learning)
 - [Discussions page](https://github.com/mrdbourke/pytorch-deep-learning/discussions)
 - [PyTorch forum](https://discuss.pytorch.org/)
 - [PyTorch Documentation](https://pytorch.org/docs/stable/)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjM2ODA3NzQwLDU1OTI2MTY5OCwtNjMxNz
-A4OTA3LC0xNjM4NDI1MTU0XX0=
+eyJoaXN0b3J5IjpbNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MD
+g5MDcsLTE2Mzg0MjUxNTRdfQ==
 -->
