md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -1,5 +1,5 @@
 # [00. PyTorch Fundamentals](https://www.learnpytorch.io/00_pytorch_fundamentals/)
-This is me documenting the process of learning ML & AI using PyTorch 
+This is me documenting the process of learning ML & AI using PyTorch. I'm going to note here what I find most interesting.
 
 ---------------- 
 
@@ -11,6 +11,6 @@ This is me documenting the process of learning ML & AI using PyTorch
 - [PyTorch Documentation](https://pytorch.org/docs/stable/)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MD
-g5MDcsLTE2Mzg0MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbMjEyODYwNDEzOCw2MjgxMjc0OSw1NTkyNj
+E2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1NF19
 -->
