md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -11,10 +11,11 @@ This is me documenting the process of learning ML & AI using PyTorch. I'm going 
 - [PyTorch Documentation](https://pytorch.org/docs/stable/)
 
 -------------------
-
-
+### Anaconda setup
+- Download [here](https://www.anaconda.com/download)
+- See basic tutorial [here]()
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NTU2MTY3MjUsMjEyODYwNDEzOCw2Mj
+eyJoaXN0b3J5IjpbLTEyMDI3ODA3NjQsMjEyODYwNDEzOCw2Mj
 gxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1
 NF19
 -->
