md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -12,10 +12,10 @@ This is me documenting the process of learning ML & AI using PyTorch. I'm going 
 
 -------------------
 ### Anaconda setup
-- Download [here](https://www.anaconda.com/download)
-- See basic tutorial [here]()
+You can download Anaconda [here](https://www.anaconda.com/download) and watch a basic tutorial [here](https://freelearning.anaconda.cloud/get-started-with-anaconda).
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMDI3ODA3NjQsMjEyODYwNDEzOCw2Mj
+eyJoaXN0b3J5IjpbLTE3NzA0NzY4NzksMjEyODYwNDEzOCw2Mj
 gxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1
 NF19
 -->
