md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -14,8 +14,10 @@ This is me documenting the process of learning ML & AI using PyTorch. I'm going 
 ### Anaconda setup
 You can download Anaconda [here](https://www.anaconda.com/download) and watch a basic tutorial [here](https://freelearning.anaconda.cloud/get-started-with-anaconda).
 
+#### Useful conda commands:
+-
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NzA0NzY4NzksMjEyODYwNDEzOCw2Mj
-gxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1
-NF19
+eyJoaXN0b3J5IjpbMTM2NzQyMzAxOSwyMTI4NjA0MTM4LDYyOD
+EyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0
+XX0=
 -->
