md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -15,10 +15,10 @@ This is me documenting the process of learning ML & AI using PyTorch. I'm going 
 You can download Anaconda [here](https://www.anaconda.com/download) and watch a basic tutorial [here](https://freelearning.anaconda.cloud/get-started-with-anaconda).
 
 #### Useful conda commands:
-- conda --version  |#| self-explanatory
+- conda --version **#** self-explanatory
 - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1Mjk5MjM3NDYsMjEyODYwNDEzOCw2Mj
-gxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1
-NF19
+eyJoaXN0b3J5IjpbMTQ4MzgxMzY1NiwyMTI4NjA0MTM4LDYyOD
+EyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0
+XX0=
 -->
