md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -16,9 +16,11 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 
 #### Useful conda commands:
 - conda --version **#** self-explanatory
-- 
+- conda env list **#** see environments
+- conda create --name example **#** create environment named example
+- conda activate example **#** mo
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ4MzgxMzY1NiwyMTI4NjA0MTM4LDYyOD
+eyJoaXN0b3J5IjpbLTgwMDMyNDU2MCwyMTI4NjA0MTM4LDYyOD
 EyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0
 XX0=
 -->
