md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -18,9 +18,9 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda --version **#** self-explanatory
 - conda env list **#** see environments
 - conda create --name example **#** create environment named example
-- conda activate example **#** mo
+- conda activate example **#** *"move"* to the environment named example
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgwMDMyNDU2MCwyMTI4NjA0MTM4LDYyOD
-EyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0
-XX0=
+eyJoaXN0b3J5IjpbOTI0ODEyMjI3LDIxMjg2MDQxMzgsNjI4MT
+I3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRd
+fQ==
 -->
