--- a/md/00.md
+++ b/md/00.md
@@ -19,8 +19,10 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda env list **#** see environments
 - conda create --name example **#** create environment named example
 - conda activate example **#** *"move"* to the environment named example
+- conda install pytorch torchvision cpuonly -c pytorch **#** self-explanatory
+- jupyter-lab **#** opens jupyter-la
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTI0ODEyMjI3LDIxMjg2MDQxMzgsNjI4MT
-I3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRd
-fQ==
+eyJoaXN0b3J5IjpbMTkxMzgyMzY3MCwyMTI4NjA0MTM4LDYyOD
+EyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0
+XX0=
 -->
