md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -20,9 +20,10 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda create --name example **#** create environment named example
 - conda activate example **#** *"move"* to the environment named example
 - conda install pytorch torchvision cpuonly -c pytorch **#** self-explanatory
-- jupyter-lab **#** opens jupyter-la
+- jupyter-lab **#** opens jupyter-lab
+- conda deactivate
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxMzgyMzY3MCwyMTI4NjA0MTM4LDYyOD
-EyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0
-XX0=
+eyJoaXN0b3J5IjpbMjY5ODczOTU0LDIxMjg2MDQxMzgsNjI4MT
+I3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRd
+fQ==
 -->
