--- a/md/00.md
+++ b/md/00.md
@@ -14,16 +14,16 @@ This is me documenting the process of learning ML & AI using PyTorch. I'm going 
 ### Anaconda setup
 You can download Anaconda [here](https://www.anaconda.com/download) and watch a basic tutorial [here](https://freelearning.anaconda.cloud/get-started-with-anaconda).
 
-#### Useful conda commands:
+#### Useful conda commands (on Windows run in Anaconda Prompt):
 - conda --version **#** self-explanatory
 - conda env list **#** see environments
 - conda create --name example **#** create environment named example
 - conda activate example **#** *"move"* to the environment named example
 - conda install pytorch torchvision cpuonly -c pytorch **#** self-explanatory
 - jupyter-lab **#** opens jupyter-lab
-- conda deactivate
+- conda deactivate **#** moves to base environment
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjY5ODczOTU0LDIxMjg2MDQxMzgsNjI4MT
-I3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRd
-fQ==
+eyJoaXN0b3J5IjpbMTc0NjExOTYwNCwyMTI4NjA0MTM4LDYyOD
+EyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0
+XX0=
 -->
