md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -17,13 +17,14 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 #### Useful conda commands (on Windows run in Anaconda Prompt):
 - conda --version **#** self-explanatory
 - conda env list **#** see environments
+- conda list **#** see installed packages
 - conda create --name example **#** create environment named example
 - conda activate example **#** *"move"* to the environment named example
 - conda install pytorch torchvision cpuonly -c pytorch **#** self-explanatory
 - jupyter-lab **#** opens jupyter-lab
 - conda deactivate **#** moves to base environment
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc0NjExOTYwNCwyMTI4NjA0MTM4LDYyOD
-EyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0
-XX0=
+eyJoaXN0b3J5IjpbLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMT
+I4NjA0MTM4LDYyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3
+LC0xNjM4NDI1MTU0XX0=
 -->
