--- a/md/00.md
+++ b/md/00.md
@@ -20,11 +20,11 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda list **#** see installed packages
 - conda create --name example **#** create environment named example
 - conda activate example **#** *"move"* to the environment named example
-- conda install pytorch torchvision cpuonly -c pytorch **#** self-explanatory
-- jupyter-lab **#** opens jupyter-lab
+- conda install jupyterlab **#** self-explanatory
+- jupyter-lab **#** opens Jupyter Lab
 - conda deactivate **#** moves to base environment
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMT
-I4NjA0MTM4LDYyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3
-LC0xNjM4NDI1MTU0XX0=
+eyJoaXN0b3J5IjpbLTIxMzk4ODY4MCwtMTIyNTEyNzI1NywxNz
+Q2MTE5NjA0LDIxMjg2MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4
+LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRdfQ==
 -->
