--- a/md/00.md
+++ b/md/00.md
@@ -22,9 +22,10 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda activate example **#** *"move"* to the environment named example
 - conda install jupyterlab **#** self-explanatory
 - jupyter-lab **#** opens Jupyter Lab
+- jupyter 
 - conda deactivate **#** moves to base environment
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMzk4ODY4MCwtMTIyNTEyNzI1NywxNz
-Q2MTE5NjA0LDIxMjg2MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4
-LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbLTg1MDM1MDQ5NiwtMjEzOTg4NjgwLC0xMj
+I1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOCw2MjgxMjc0
+OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1NF19
 -->
