md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -21,11 +21,12 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda create --name example **#** create environment named example
 - conda activate example **#** *"move"* to the environment named example
 - conda install jupyterlab **#** self-explanatory
-- jupyter-lab or j **#** opens Jupyter Lab
+- jupyter-lab ***or*** jupyter lab **#** opens Jupyter Lab
 - jupyter notebook **#** launch Jupyter Notebook
 - conda deactivate **#** moves to base environment
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUwNjg0ODc2NiwtMjEzOTg4NjgwLC0xMj
-I1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOCw2MjgxMjc0
-OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1NF19
+eyJoaXN0b3J5IjpbLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwtMT
+IyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgsNjI4MTI3
+NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRdfQ
+==
 -->
