md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -24,9 +24,10 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - jupyter-lab ***or*** jupyter lab **#** opens Jupyter Lab
 - jupyter notebook **#** launch Jupyter Notebook
 - conda deactivate **#** moves to base environment
+- pyt
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwtMT
-IyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgsNjI4MTI3
-NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRdfQ
-==
+eyJoaXN0b3J5IjpbMjA5OTQ0MTUyNiwtMjE0NjAwNjE4NCwtMj
+EzOTg4NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYw
+NDEzOCw2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMT
+YzODQyNTE1NF19
 -->
