md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -24,10 +24,10 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - jupyter-lab ***or*** jupyter lab **#** opens Jupyter Lab
 - jupyter notebook **#** launch Jupyter Notebook
 - conda deactivate **#** moves to base environment
-- pyt
+- python -m ipykernel install --user --name=example **#** matches kernel to the 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA5OTQ0MTUyNiwtMjE0NjAwNjE4NCwtMj
-EzOTg4NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYw
-NDEzOCw2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMT
-YzODQyNTE1NF19
+eyJoaXN0b3J5IjpbODYzNTQzMzE1LC0yMTQ2MDA2MTg0LC0yMT
+M5ODg2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0
+MTM4LDYyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNj
+M4NDI1MTU0XX0=
 -->
