md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -26,9 +26,10 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - jupyter notebook **#** launch Jupyter Notebook
 - conda deactivate **#** moves to base environment
 - python -m ipykernel install --user --name=example **#** matches kernel to the environment named *example*
+- A lot more [here](https://docs.conda.io/projects/conda/en/latest/_downloads/a35958a2a7fa1e927e7dfb61ebcd69a9/conda-4.14.pdf)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMj
-EzOTg4NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYw
-NDEzOCw2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMT
-YzODQyNTE1NF19
+eyJoaXN0b3J5IjpbNDQwOTc1NzI3LC0zNzcwMDYyMTEsLTIxND
+YwMDYxODQsLTIxMzk4ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5
+NjA0LDIxMjg2MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4LC02Mz
+E3MDg5MDcsLTE2Mzg0MjUxNTRdfQ==
 -->
