md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -27,9 +27,11 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda deactivate **#** moves to base environment
 - python -m ipykernel install --user --name=example **#** matches kernel to the environment named *example*
 - A lot more [here](https://docs.conda.io/projects/conda/en/latest/_downloads/a35958a2a7fa1e927e7dfb61ebcd69a9/conda-4.14.pdf)
+---
+### Introduction to tensors
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDQwOTc1NzI3LC0zNzcwMDYyMTEsLTIxND
-YwMDYxODQsLTIxMzk4ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5
-NjA0LDIxMjg2MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4LC02Mz
-E3MDg5MDcsLTE2Mzg0MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbNDY3MzI4NjcwLDQ0MDk3NTcyNywtMzc3MD
+A2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2ODAsLTEyMjUxMjcy
+NTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4LDYyODEyNzQ5LDU1OT
+I2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0XX0=
 -->
