md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -29,9 +29,11 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - A lot more [here](https://docs.conda.io/projects/conda/en/latest/_downloads/a35958a2a7fa1e927e7dfb61ebcd69a9/conda-4.14.pdf)
 ---
 ### Introduction to tensors
+Tensors are the fundamental building block of machine learning. Their job is to represent data in a numerical way.
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDY3MzI4NjcwLDQ0MDk3NTcyNywtMzc3MD
-A2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2ODAsLTEyMjUxMjcy
-NTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4LDYyODEyNzQ5LDU1OT
-I2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0XX0=
+eyJoaXN0b3J5IjpbLTU1NjI5OTY1MSw0NDA5NzU3MjcsLTM3Nz
+AwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4NjgwLC0xMjI1MTI3
+MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOCw2MjgxMjc0OSw1NT
+kyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1NF19
 -->
