md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -29,11 +29,12 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - A lot more [here](https://docs.conda.io/projects/conda/en/latest/_downloads/a35958a2a7fa1e927e7dfb61ebcd69a9/conda-4.14.pdf)
 ---
 ### Introduction to tensors
- **Tensors** are the fundamental building block of machine learning. Their job is to represent data in a numerical way:
-- tensor.ndim
+#### **Tensors** are the fundamental building block of machine learning. Their job is to represent data in a numerical way:
+A tensor can be just a number, thus having dimension 0
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQyOTU0NjY4MCw0NDA5NzU3MjcsLTM3Nz
-AwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4NjgwLC0xMjI1MTI3
-MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOCw2MjgxMjc0OSw1NT
-kyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1NF19
+eyJoaXN0b3J5IjpbLTExMzQ3MDI0OTQsMTQyOTU0NjY4MCw0ND
+A5NzU3MjcsLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4
+NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOC
+w2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQy
+NTE1NF19
 -->
