md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -31,11 +31,11 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 ### Introduction to tensors
 #### **Tensors** are the fundamental building block of machine learning. Their job is to represent data in a numerical way:
 A tensor can be just a number, thus having dimension 0, an array, thus having dimension 1, and so on ...
-- `
+- `s = torch.tensor(4)` $\Rightarrow$ `s.ndim=0`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQyODUwODc1MywxNDI5NTQ2NjgwLDQ0MD
-k3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2
-ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4LD
-YyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1
-MTU0XX0=
+eyJoaXN0b3J5IjpbLTEyMDE5OTIyNDQsMTQyOTU0NjY4MCw0ND
+A5NzU3MjcsLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4
+NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOC
+w2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQy
+NTE1NF19
 -->
