md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -31,11 +31,11 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 ### Introduction to tensors
 #### **Tensors** are the fundamental building block of machine learning. Their job is to represent data in a numerical way:
 A tensor can be just a number, thus having dimension 0, an array, thus having dimension 1, and so on ...
-- `s = torch.tensor(4)` $\Rightarrow$ `s.ndim=0`
+- `s = torch.tensor(4)` $\Rightarrow$ `s.ndim == 0 && s.shape == torch.Size([])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMDE5OTIyNDQsMTQyOTU0NjY4MCw0ND
-A5NzU3MjcsLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4
-NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOC
-w2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQy
-NTE1NF19
+eyJoaXN0b3J5IjpbNDM2MTA2NzIxLDE0Mjk1NDY2ODAsNDQwOT
+c1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4ODY4
+MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgsNj
+I4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUx
+NTRdfQ==
 -->
