md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -32,10 +32,12 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 #### **Tensors** are the fundamental building block of machine learning. Their job is to represent data in a numerical way:
 A tensor can be just a number, thus having dimension 0, an array, thus having dimension 1, and so on ...
 - `s = torch.tensor(4)` $\Rightarrow$ `s.ndim == 0 && s.shape == torch.Size([])`
+- `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
+- `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDM2MTA2NzIxLDE0Mjk1NDY2ODAsNDQwOT
-c1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4ODY4
-MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgsNj
-I4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUx
-NTRdfQ==
+eyJoaXN0b3J5IjpbLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MD
+k3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2
+ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4LD
+YyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1
+MTU0XX0=
 -->
