md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -34,10 +34,11 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor(4)` $\Rightarrow$ `s.ndim == 0 && s.shape == torch.Size([])`
 - `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
+### Random tensors
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MD
-k3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2
-ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4LD
-YyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1
-MTU0XX0=
+eyJoaXN0b3J5IjpbMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mj
+k1NDY2ODAsNDQwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYx
+ODQsLTIxMzk4ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LD
+IxMjg2MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5
+MDcsLTE2Mzg0MjUxNTRdfQ==
 -->
