md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -16,11 +16,11 @@ This is me documenting the process of learning ML & AI using PyTorch. I'm going 
 You can download Anaconda [here](https://www.anaconda.com/download) and watch a basic tutorial [here](https://freelearning.anaconda.cloud/get-started-with-anaconda).
 
 #### Useful conda commands (on Windows run in Anaconda Prompt):
-- conda --version **#** self-explanatory
-- conda env list **#** see environments
-- conda list **#** see installed packages
-- conda create --name example **#** create environment named *example*
-- conda activate example **#** *"move"* to the environment named *example*
+- conda --version **#** *self-explanatory*
+- conda env list **#** *see environments*
+- conda list **#** *see installed packages*
+- conda create --name example **#** *create environment named *example**
+- conda activate example **#** *"move"* to the environment named *example**
 - conda install jupyterlab **#** self-explanatory
 - jupyter-lab ***or*** jupyter lab **#** opens Jupyter Lab
 - jupyter notebook **#** launch Jupyter Notebook
@@ -36,9 +36,9 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 ### Random tensors
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mj
-k1NDY2ODAsNDQwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYx
-ODQsLTIxMzk4ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LD
-IxMjg2MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5
-MDcsLTE2Mzg0MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbNDAxODU2NDcsMTQwODc3MTQwMywtODgzOT
+c3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1NzI3LC0zNzcwMDYyMTEs
+LTIxNDYwMDYxODQsLTIxMzk4ODY4MCwtMTIyNTEyNzI1NywxNz
+Q2MTE5NjA0LDIxMjg2MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4
+LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRdfQ==
 -->
