md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -22,7 +22,7 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda create --name example **#** *create environment named *example**
 - conda activate example **#** *"move"* to the environment named *example**
 - conda install jupyterlab **#** *self-explanatory*
-- jupyter-lab ***or*** jupyter lab **#** *opens Jupyter Lab*
+- jupyter-lab ***or*** jupyter lab **#** *opens Jupyter Lab in the folder you are in*
 - jupyter notebook **#** *launch Jupyter Notebook*
 - conda deactivate **#** *moves to base environment*
 - python -m ipykernel install --user --name=example **#** *matches kernel to the environment named *example**
@@ -36,9 +36,10 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 ### Random tensors
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mz
-k3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywtMzc3MDA2MjEx
-LC0yMTQ2MDA2MTg0LC0yMTM5ODg2ODAsLTEyMjUxMjcyNTcsMT
-c0NjExOTYwNCwyMTI4NjA0MTM4LDYyODEyNzQ5LDU1OTI2MTY5
-OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0XX0=
+eyJoaXN0b3J5IjpbLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwOD
+c3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1NzI3
+LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwtMT
+IyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgsNjI4MTI3
+NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRdfQ
+==
 -->
