md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -34,12 +34,13 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor(4)` $\Rightarrow$ `s.ndim == 0 && s.shape == torch.Size([])`
 - `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
+- `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
 ### Random tensors
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwOD
-c3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1NzI3
-LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwtMT
-IyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgsNjI4MTI3
-NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0MjUxNTRdfQ
-==
+eyJoaXN0b3J5IjpbLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Nj
+g5MDg4MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2
+ODAsNDQwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLT
+IxMzk4ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2
+MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLT
+E2Mzg0MjUxNTRdfQ==
 -->
