md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -30,17 +30,17 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 ---
 ### Introduction to tensors
 #### **Tensors** are the fundamental building block of machine learning. Their job is to represent data in a numerical way:
-A tensor can be just a number, thus having dimension 0, an array, thus having dimension 1, and so on ...
+A tensor can be just a number, thus having dimension 0, an array, thus having dimension 1, and so on. See graphical example [here](https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/00-scalar-vector-matrix-tensor.png).
 - `s = torch.tensor(4)` $\Rightarrow$ `s.ndim == 0 && s.shape == torch.Size([])`
 - `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
 ### Random tensors
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Nj
-g5MDg4MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2
-ODAsNDQwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLT
-IxMzk4ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2
-MDQxMzgsNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLT
-E2Mzg0MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbMTMwODI3NTkyNywtMTM2NjgzODQ0MywtOD
+YyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAzLC04ODM5Nzcx
+MjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLTM3NzAwNjIxMSwtMj
+E0NjAwNjE4NCwtMjEzOTg4NjgwLC0xMjI1MTI3MjU3LDE3NDYx
+MTk2MDQsMjEyODYwNDEzOCw2MjgxMjc0OSw1NTkyNjE2OTgsLT
+YzMTcwODkwNywtMTYzODQyNTE1NF19
 -->
