md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -36,11 +36,12 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
 ### Random tensors
+We can create random tensors using `torch.rand([size=())`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMwODI3NTkyNywtMTM2NjgzODQ0MywtOD
-YyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAzLC04ODM5Nzcx
-MjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLTM3NzAwNjIxMSwtMj
-E0NjAwNjE4NCwtMjEzOTg4NjgwLC0xMjI1MTI3MjU3LDE3NDYx
-MTk2MDQsMjEyODYwNDEzOCw2MjgxMjc0OSw1NTkyNjE2OTgsLT
-YzMTcwODkwNywtMTYzODQyNTE1NF19
+eyJoaXN0b3J5IjpbMTk0Mjg2MTI4OCwxMzA4Mjc1OTI3LC0xMz
+Y2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0
+MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywtMz
+c3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2ODAsLTEyMjUx
+MjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4LDYyODEyNzQ5LD
+U1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0XX0=
 -->
