--- a/md/00.md
+++ b/md/00.md
@@ -36,12 +36,12 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
 ### Random tensors
-We can create random tensors using `torch.rand([size])`. By default, the
+We can create random tensors using `torch.rand(size)`. By default, the
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU3OTU3MTE5MiwxMzA4Mjc1OTI3LC0xMz
-Y2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0
-MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywtMz
-c3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2ODAsLTEyMjUx
-MjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4LDYyODEyNzQ5LD
-U1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4NDI1MTU0XX0=
+eyJoaXN0b3J5IjpbLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMT
+M2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4Nzcx
+NDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLT
+M3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4NjgwLC0xMjI1
+MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOCw2MjgxMjc0OS
+w1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1NF19
 -->
