--- a/md/00.md
+++ b/md/00.md
@@ -36,12 +36,13 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
 ### Random tensors
-We can create random tensors using `torch.rand(size)`. By default, the
+We can create random tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMT
-M2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4Nzcx
-NDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLT
-M3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4NjgwLC0xMjI1
-MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOCw2MjgxMjc0OS
-w1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYzODQyNTE1NF19
+eyJoaXN0b3J5IjpbNDI4ODA2OTMwLC0xODMyODQxOTI4LDEzMD
+gyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4
+MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsND
+QwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4
+ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMz
+gsNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0
+MjUxNTRdfQ==
 -->
