md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -27,22 +27,27 @@ You can download Anaconda [here](https://www.anaconda.com/download) and watch a 
 - conda deactivate **#** *moves to base environment*
 - python -m ipykernel install --user --name=example **#** *matches kernel to the environment named *example**
 - A lot more [here](https://docs.conda.io/projects/conda/en/latest/_downloads/a35958a2a7fa1e927e7dfb61ebcd69a9/conda-4.14.pdf)
+
 ---
+
 ### Introduction to tensors
+
 #### **Tensors** are the fundamental building block of machine learning. Their job is to represent data in a numerical way:
 A tensor can be just a number, thus having dimension 0, an array, thus having dimension 1, and so on. See graphical example [here](https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/00-scalar-vector-matrix-tensor.png).
 - `s = torch.tensor(4)` $\Rightarrow$ `s.ndim == 0 && s.shape == torch.Size([])`
 - `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
+
 ### Random tensors
-We can create random tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`.
+
+We can create random tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDI4ODA2OTMwLC0xODMyODQxOTI4LDEzMD
-gyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4
-MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsND
-QwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4
-ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMz
-gsNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0
-MjUxNTRdfQ==
+eyJoaXN0b3J5IjpbLTEwOTY3MzIzMzYsLTE4MzI4NDE5MjgsMT
+MwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkw
+ODgwOSwxNDA4NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MC
+w0NDA5NzU3MjcsLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEz
+OTg4NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwND
+EzOCw2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYz
+ODQyNTE1NF19
 -->
