--- a/md/00.md
+++ b/md/00.md
@@ -41,13 +41,17 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 
 ### Random tensors
 
-We can create random tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. 
+We can create random tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. You can see how to change those and more details [here](https://pytorch.org/docs/stable/generated/torch.rand.html?highlight=rand#torch.rand).
+
+Examples:
+
+-
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwOTY3MzIzMzYsLTE4MzI4NDE5MjgsMT
-MwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkw
-ODgwOSwxNDA4NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MC
-w0NDA5NzU3MjcsLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEz
-OTg4NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwND
-EzOCw2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYz
-ODQyNTE1NF19
+eyJoaXN0b3J5IjpbNjYyMDI4ODExLC0xODMyODQxOTI4LDEzMD
+gyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4
+MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsND
+QwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4
+ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMz
+gsNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0
+MjUxNTRdfQ==
 -->
