md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -45,9 +45,10 @@ We can create random tensors using `torch.rand()`. By default, the datatype is `
 
 Examples:
 
--
+- `torch.rand(2)` $\Rightarrow$ `tensor([0.6185, 0.2044])`
+- ` `tensor([[0.9920, 0.1177, 0.4073],[0.1193,0.9847,0.1559]])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjYyMDI4ODExLC0xODMyODQxOTI4LDEzMD
+eyJoaXN0b3J5IjpbMzQ3MzUxNTQ3LC0xODMyODQxOTI4LDEzMD
 gyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4
 MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsND
 QwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4
