--- a/md/00.md
+++ b/md/00.md
@@ -42,17 +42,18 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 ### Random tensors
 
 We can create random tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. You can see how to change those and more details [here](https://pytorch.org/docs/stable/generated/torch.rand.html?highlight=rand#torch.rand).
+Similarly, you can create tensors full of zeros (or ones).
 
 Examples:
 
 - `torch.rand(2)` $\Rightarrow$ `tensor([0.6185, 0.2044])`
 - `torch.rand(size=(2,3))` $\Rightarrow$ `tensor([[0.9920, 0.1177, 0.4073],[0.1193,0.9847,0.1559]])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUzNDE4Mzc1NiwtMTgzMjg0MTkyOCwxMz
-A4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4
-ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLD
-Q0MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5
-ODg2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MT
-M4LDYyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4
-NDI1MTU0XX0=
+eyJoaXN0b3J5IjpbLTc5OTA2NzUzLC0xODMyODQxOTI4LDEzMD
+gyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4
+MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsND
+QwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4
+ODY4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMz
+gsNjI4MTI3NDksNTU5MjYxNjk4LC02MzE3MDg5MDcsLTE2Mzg0
+MjUxNTRdfQ==
 -->
