--- a/md/00.md
+++ b/md/00.md
@@ -49,12 +49,13 @@ Examples:
 - `torch.rand(2)` $\Rightarrow$ `tensor([0.6185, 0.2044])`
 - `torch.rand(size=(2,3))` $\Rightarrow$ `tensor([[0.9920, 0.1177, 0.4073],[0.1193,0.9847,0.1559]])`
 - `torch.zeros(2)` $\Rightarrow$ `tensor([0., 0.])`
+- `torch.ones(size=(1,2))` $\Rightarrow$ `tensor([[1., 1.]])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2Mjg2MTc1OTUsLTE4MzI4NDE5MjgsMT
-MwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkw
-ODgwOSwxNDA4NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MC
-w0NDA5NzU3MjcsLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEz
-OTg4NjgwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwND
-EzOCw2MjgxMjc0OSw1NTkyNjE2OTgsLTYzMTcwODkwNywtMTYz
-ODQyNTE1NF19
+eyJoaXN0b3J5IjpbMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMz
+A4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4
+ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLD
+Q0MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5
+ODg2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MT
+M4LDYyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4
+NDI1MTU0XX0=
 -->
