md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -39,10 +39,10 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
 
-### Random tensors
+### Creating tensors
 
-We can create random tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. You can see how to change those and more details [here](https://pytorch.org/docs/stable/generated/torch.rand.html?highlight=rand#torch.rand).
-Similarly, you can create tensors full of [zeros](https://pytorch.org/docs/stable/generated/torch.zeros.html?highlight=zeros#torch.zeros) (or [ones](https://pytorch.org/docs/stable/generated/torch.ones.html?highlight=ones#torch.ones)).
+We can create **random** tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. You can see how to change those and more details [here](https://pytorch.org/docs/stable/generated/torch.rand.html?highlight=rand#torch.rand).
+Similarly, you can create tensors full of [**zeros**](https://pytorch.org/docs/stable/generated/torch.zeros.html?highlight=zeros#torch.zeros) (or [**ones**](https://pytorch.org/docs/stable/generated/torch.ones.html?highlight=ones#torch.ones)).
 
 Examples:
 
@@ -51,11 +51,11 @@ Examples:
 - `torch.zeros(2)` $\Rightarrow$ `tensor([0., 0.])`
 - `torch.ones(size=(1,2))` $\Rightarrow$ `tensor([[1., 1.]])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMz
-A4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4
-ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLD
-Q0MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5
-ODg2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MT
-M4LDYyODEyNzQ5LDU1OTI2MTY5OCwtNjMxNzA4OTA3LC0xNjM4
-NDI1MTU0XX0=
+eyJoaXN0b3J5IjpbLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMT
+gzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIz
+MDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOS
+wxNDI5NTQ2NjgwLDQ0MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2
+MDA2MTg0LC0yMTM5ODg2ODAsLTEyMjUxMjcyNTcsMTc0NjExOT
+YwNCwyMTI4NjA0MTM4LDYyODEyNzQ5LDU1OTI2MTY5OCwtNjMx
+NzA4OTA3XX0=
 -->
