--- a/md/00.md
+++ b/md/00.md
@@ -42,7 +42,7 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 ### Creating tensors
 
 We can create **random** tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. You can see how to change those and more details [here](https://pytorch.org/docs/stable/generated/torch.rand.html?highlight=rand#torch.rand).
-Similarly, you can create tensors full of [**zeros**](https://pytorch.org/docs/stable/generated/torch.zeros.html?highlight=zeros#torch.zeros) (or [**ones**](https://pytorch.org/docs/stable/generated/torch.ones.html?highlight=ones#torch.ones)).
+Similarly, you can create tensors full of [**zeros**](https://pytorch.org/docs/stable/generated/torch.zeros.html?highlight=zeros#torch.zeros) (or [**ones**](https://pytorch.org/docs/stable/generated/torch.ones.html?highlight=ones#torch.ones)). You can also create a 1-D tensor that is populated with
 
 Examples:
 
@@ -51,11 +51,11 @@ Examples:
 - `torch.zeros(2)` $\Rightarrow$ `tensor([0., 0.])`
 - `torch.ones(size=(1,2))` $\Rightarrow$ `tensor([[1., 1.]])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMT
-gzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIz
-MDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOS
-wxNDI5NTQ2NjgwLDQ0MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2
-MDA2MTg0LC0yMTM5ODg2ODAsLTEyMjUxMjcyNTcsMTc0NjExOT
-YwNCwyMTI4NjA0MTM4LDYyODEyNzQ5LDU1OTI2MTY5OCwtNjMx
-NzA4OTA3XX0=
+eyJoaXN0b3J5IjpbMTAwNzMyMjIyOCwtMTk5MTU3OTMwNSwxND
+A4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNjY4
+Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwODc3MTQwMy
+wtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1NzI3LC0zNzcw
+MDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwtMTIyNTEyNz
+I1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgsNjI4MTI3NDksNTU5
+MjYxNjk4XX0=
 -->
